--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Check out the <a href="doc/api/">ClojureScript API</a> docs for <a href="https://github.com/dollabs/plan-schema/">plan-schema</a></p>
+        <p>Check out the <a href="doc/api/">Clojure(Script) API</a> docs for <a href="https://github.com/dollabs/plan-schema/">plan-schema</a></p>
       </section>
     </div>
 
